# mico

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SESSION_HANDOFF.md  pyproject.toml
analysis/: claude code.md  mico-improvement-framework.md  mico-memory-context-design.md  mico-resume-project-roadmap.md  pico-author-notes.md  pico-security-and-tools.md
benchmarks/: __main__.py  eval.py  eval_config.py  eval_metrics.py  eval_runner.py  eval_tasks.json  live.py  metrics.py  runner.py  tasks.json
docs/: pico.txt  字符.txt
docs/superpowers/plans/: 2026-06-25-mico-memory-system.md  2026-06-25-mico-repeat-patch-report-observability.md  2026-06-29-mico-durable-memory-remember.md  2026-06-29-mico-episodic-read-summary.md  2026-06-29-mico-session-context-manager.md
examples/practical-python-task/: README.md  verify.py
examples/tiny-python-bug/: README.md  math_buggy.py  verify_math.py
mico/: __init__.py  agent_loop.py  banner.py  checkpoint.py  cli.py  context_manager.py  dotenv.py  memory.py  memory_store.py  parser.py  prompt.py  providers.py  runtime.py  security.py  session_store.py  state.py  tool_executor.py  tools.py  verification.py  workspace.py
tests/: test_agent_loop.py  test_benchmarks.py  test_benchmarks_live.py  test_checkpoint.py  test_cli_env.py  test_cli_repl.py  test_context_manager.py  test_dotenv.py  test_eval_benchmarks.py  test_memory.py  test_memory_store.py  test_parser.py  test_prompt.py  test_providers.py  test_runtime.py  test_security.py  test_session_store.py  test_tools.py  test_verification.py
