[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mico"
version = "0.1.0"
description = "A tiny local coding agent demo."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mico = "mico.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["mico*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
